# pklr

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  communique.toml  mise.toml  release-plz.toml
.github/workflows/: autofix.yml  ci.yml  release-plz.yml  zizmor.yml
src/: capabilities.rs  error.rs  eval.rs  lexer.rs  lib.rs  parser.rs  value.rs
tests/: integration.rs  pkl_features.rs
tests/fixtures/: animal.pkl  base.pkl  base_module.pkl  base_with_class.pkl  circular_a.pkl  circular_b.pkl  hk.pkl  readme.txt
tests/fixtures/items/: alpha.pkl  beta.pkl
