[package]
name        = "pklr"
version     = "0.1.0"
edition     = "2024"
description = "Pure Rust pkl configuration language parser and evaluator"
license     = "MIT"
repository  = "https://github.com/jdx/pklr"
homepage    = "https://github.com/jdx/pklr"
keywords    = ["pkl", "config", "parser"]
categories  = ["config", "parsing"]
include     = ["/src/**/*", "/tests/**/*", "/Cargo.toml", "/README.md", "/LICENSE"]

[dependencies]
indexmap    = "2"
miette     = { version = "7", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
async-recursion = "1"
reqwest         = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio           = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
