[package]
name        = "pklr"
version     = "1.2.0"
edition      = "2024"
rust-version = "1.88"
description = "Pure Rust pkl configuration language parser and evaluator"
license     = "MIT"
repository  = "https://github.com/jdx/pklr"
homepage    = "https://github.com/jdx/pklr"
keywords    = ["pkl", "config", "parser"]
categories  = ["config", "parsing"]
include     = ["/src/**/*", "/tests/**/*", "/Cargo.toml", "/README.md", "/LICENSE"]

[features]
default = [
  "parse",
  "eval-core",
  "native-io",
  "http",
  "package-zip",
  "miette-diagnostics",
]
parse = []
eval-core = ["parse", "dep:async-recursion", "dep:url"]
native-io = ["eval-core"]
http = ["eval-core", "dep:reqwest"]
package-zip = ["http", "native-io", "dep:zip"]
miette-diagnostics = ["dep:miette"]

[dependencies]
indexmap    = "2"
miette     = { version = "7", features = ["derive"], optional = true }
serde_json = "1"
thiserror  = "2"
async-recursion = { version = "1", optional = true }
reqwest         = { version = "0.13", default-features = false, features = ["rustls"], optional = true }
tokio           = { version = "1", features = ["rt"], optional = true }
zip             = { version = "8", default-features = false, features = ["deflate"], optional = true }
url             = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "integration"
required-features = ["native-io", "http", "package-zip"]

[[test]]
name = "pkl_features"
required-features = ["native-io", "http", "package-zip"]

[profile.dev]
debug = 1
